<resources>
    <string name="app_name">Peil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_lesson">Дальше</string>
    <string name="study">Учиться</string>
    <string name="repeat">Повторить</string>
    <string name="community">Сообщество</string>
    <string name="notifications">Уведомления</string>
    <string name="profile">Мой профиль</string>
    <string name="start_lesson">Начать</string>
    <string name="lesson_detail_transition_name">lesson_detail</string>
    <string name="lesson_transition_name">lesson_card_%1$s</string>
    <string name="repeat_weak_words">Тебе сегодня надо повторить <b>слабые слова</b></string>
    <string name="continue_lesson">Продолжить</string>
    <string name="title_toolbar_lesson">Урок %1$d - %2$s</string>
</resources>