<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/lessonsFragment"
        android:title="@string/study"
        android:icon="@drawable/ic_baseline_emoji_objects"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/repeatWordFragment"
        android:title="@string/repeat"
        android:icon="@drawable/ic_baseline_trending_up"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/communityFragment"
        android:title="@string/community"
        android:icon="@drawable/ic_baseline_groups"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/notificationsFragment"
        android:title="@string/notifications"
        android:icon="@drawable/ic_baseline_notifications"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person"
        app:showAsAction="ifRoom"/>
</menu>